# speaking_face

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: face.h  msg_tool.h  opengl_basic.h  shader.h
launch/: face.launch
msg/: FaceConfig.msg  FaceParam.msg  MouseTouch.msg  ShapeConfig.msg
phonemes/: a.npy  i.npy  o.npy  u.npy
script/: speaking.py
shaders/frag/: eye.fs
shaders/vertex/: eye.vs
src/: face.cpp  math3D.cpp  msg_tool.cpp  shader.cpp
